# modern-di-arq

./: .gitignore  Justfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: _checks.yml  release.yml
architecture/: README.md  dependency-injection.md
modern_di_arq/: __init__.py  main.py
planning/: README.md
planning/changes/: 2026-07-10.01-arq-di-integration.md  2026-07-13.01-adopt-integration-kit.md  2026-07-20.01-open-per-job-child-container.md  2026-07-21.01-guaranteed-child-teardown.md
planning/releases/: 2.0.0.md  2.1.0.md  3.0.0.md  3.1.0.md
tests/: conftest.py  dependencies.py  test_jobs.py  test_lifespan.py  test_smoke.py
